# PopcornHUB

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: comments_data.txt  contents_data.txt  genres_data.txt  users_data.txt
files/: binary_tree.hpp
include/: content.hpp  gender.hpp  node.hpp
include/containers/: binary_tree.hpp  doubly_linked_list.hpp  node.hpp  node_tree.hpp
include/core/: comment.hpp  content.hpp  genre.hpp  node2.hpp  question.hpp  score_calculator.hpp  type.hpp  user.hpp  watched_entry.hpp
include/services/: admin_service.hpp  auth_service.hpp  comment_manager.hpp  content_list.hpp  content_manager.hpp  data_manager.hpp  genre_manager.hpp  interaction_service.hpp  statistics.hpp  statistics_service.hpp  user_manager.hpp
include/ui/: ansi.hpp  console.hpp  screens.hpp  window.hpp
src/: main.cpp  main_console.cpp
src/containers/: binary_tree.cpp  doubly_linked_list.cpp
src/core/: comment.cpp  content.cpp  genre.cpp  question.cpp  score_calculator.cpp  user.cpp  watched_entry.cpp
src/services/: admin_service.cpp  auth_service.cpp  comment_manager.cpp  content_manager.cpp  genre_manager.cpp  interaction_service.cpp  statistics.cpp  statistics_service.cpp  user_manager.cpp
src/ui/: console.cpp  window.cpp
tests/: test_binary_tree.cpp  test_content_save.cpp  test_data_management.cpp  test_get_data.cpp  test_recommendation.cpp  test_ui.cpp
tests/data/: comment_test.txt  content_test.txt  genre_test.txt  user_test.txt
